[gd_scene load_steps=16 format=2]

[ext_resource path="res://lama.gd" type="Script" id=1]
[ext_resource path="res://lama.material" type="Material" id=2]
[ext_resource path="res://mountains_closer.tscn" type="PackedScene" id=3]
[ext_resource path="res://mountains.tscn" type="PackedScene" id=4]
[ext_resource path="res://meshes/lama.glb" type="PackedScene" id=5]
[ext_resource path="res://terrain.tscn" type="PackedScene" id=6]
[ext_resource path="res://mountains_close.gd" type="Script" id=7]
[ext_resource path="res://fence.tscn" type="PackedScene" id=8]
[ext_resource path="res://sounds/caminandes_ani.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/gaminandes_shock.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/gaminandes_batida_1.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/gaminandes_snap.ogg" type="AudioStream" id=12]
[ext_resource path="res://bush.tscn" type="PackedScene" id=13]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.343831, 0.459965, 0.423207 )

[sub_resource type="BoxShape" id=2]

[node name="level1" instance=ExtResource( 5 )]
script = ExtResource( 7 )

[node name="terrain_0" parent="." index="0" instance=ExtResource( 6 )]
transform = Transform( 2.41776, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="bush_0" parent="." index="1" instance=ExtResource( 13 )]

[node name="lama" parent="." index="2"]
transform = Transform( 1.44316, 0, 0, 0, 1.44316, 0, 0, 0, 1.44316, -1.88329, 0, -0.893841 )
material/0 = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="lama" index="0"]
transform = Transform( 0.584386, 0, 0, 0, 0.577144, 0.0917122, 0, -0.0917122, 0.577144, 0.629, 1.342, 1.565 )
fov = 62.0
far = 30.0

[node name="mountains" parent="lama" index="1" instance=ExtResource( 4 )]
transform = Transform( 1.12385, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.437423, 0 )

[node name="lamaKinematicBody" type="KinematicBody" parent="lama" index="2"]

[node name="CollisionShape" type="CollisionShape" parent="lama/lamaKinematicBody" index="0"]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0.127914, 0.579139, 0 )
shape = SubResource( 1 )

[node name="headLama" type="KinematicBody" parent="lama" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.384263, 0, 0 )

[node name="headCollisionShape" type="CollisionShape" parent="lama/headLama" index="0"]
transform = Transform( 0.0141542, 0, 0, 0, 0.372886, 0, 0, 0, 0.463522, 0, 0.354638, 0 )
shape = SubResource( 2 )

[node name="shock" type="AudioStreamPlayer" parent="lama" index="4"]
pause_mode = 2
stream = ExtResource( 10 )

[node name="batida" type="AudioStreamPlayer" parent="lama" index="5"]
stream = ExtResource( 11 )

[node name="snap" type="AudioStreamPlayer" parent="lama" index="6"]
stream = ExtResource( 12 )

[node name="mountains_closer_0" parent="." index="3" instance=ExtResource( 3 )]
transform = Transform( 3.05202, 0, 0, 0, 1.44316, 0, 0, 0, 1.44316, -1.88329, -1.47935, -0.893841 )

[node name="mountains_closer_2" parent="." index="4" instance=ExtResource( 3 )]
transform = Transform( 3.05202, 0, 0, 0, 1.44316, 0, 0, 0, 1.44316, 93.3653, -1.47924, -0.893841 )

[node name="mountains_closer_1" parent="." index="5" instance=ExtResource( 3 )]
transform = Transform( 3.05202, 0, 0, 0, 1.44316, 0, 0, 0, 1.44316, 46.3706, -1.47935, -0.893841 )

[node name="terrain_2" parent="." index="6" instance=ExtResource( 6 )]
transform = Transform( 2.41776, 0, 0, 0, 1, 0, 0, 0, 1, 71.464, 0, 0 )

[node name="terrain_1" parent="." index="7" instance=ExtResource( 6 )]
transform = Transform( 2.41776, 0, 0, 0, 1, 0, 0, 0, 1, 35.724, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="8"]
transform = Transform( 0.970855, 0, -0.239669, 0.132481, 0.833336, 0.536656, 0.199725, -0.552766, 0.809049, 1.78167, 3.64248, 3.70862 )
light_energy = 0.52
light_specular = 0.37
shadow_enabled = true

[node name="fence_0" parent="." index="9" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.01334, -0.088, -0.210905 )

[node name="fence_1" parent="." index="10" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.088, -0.211 )

[node name="fence_2" parent="." index="11" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, -0.088, -0.211 )

[node name="fence_3" parent="." index="12" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, -0.088, -0.211 )

[node name="fence_4" parent="." index="13" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33, -0.088, -0.211 )

[node name="fence_5" parent="." index="14" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 39, -0.088, -0.211 )

[node name="fence_6" parent="." index="15" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 47, -0.088, -0.211 )

[node name="mainAudioStreamPlayer" type="AudioStreamPlayer" parent="." index="16"]
stream = ExtResource( 9 )
volume_db = -6.0
